# win32-window-transparency

./: 01_basic_opaque.cpp  02_popup_no_decorations.cpp  03_win11_backdrop.cpp  04_layered_uniform_alpha.cpp  05_perpixel_alpha.cpp  06_perpixel_alpha_patblt.cpp  07_vulkan_perpixel_alpha.cpp  08_glfw_transparency_bug.cpp  CITATION.cff  CMakeLists.txt  LICENSE  README.md
